[project]
name = "warehouse-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Nguyen Thanh Trung",email = "nguyenthanhtrung291099@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "pettingzoo (>=1.25.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "warehouse_rl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
